# data_compression_hub

./: Makefile  README.md  docker-compose.yml  package.json  proj_main.yml  pyproject.toml  render.yaml
backend/: .env.example  Dockerfile
backend/backend/: celery.py  settings.py  wsgi.py
backend/backend/settings/: base.py
backend/users/: tasks.py
