[tool.poetry]
name = "backend"
version = "0.1.0"
description = "data compression hub"
authors = ["Soumya Nasipuri <nasipurisoumya@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
djangorestframework = "^3.15.2"
torch = "^2.5.1"
torchvision = "^0.20.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
